kubernetes/nginx-ingress/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test1-amit.gl-poc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8080
